err/products.accessiblereferencebrowserwidget.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/AccessibleReferenceBrowserWidget'...
Listing './lib/python3.5/site-packages/Products/AccessibleReferenceBrowserWidget/i18n'...
Listing './lib/python3.5/site-packages/Products/AccessibleReferenceBrowserWidget/profiles'...
Listing './lib/python3.5/site-packages/Products/AccessibleReferenceBrowserWidget/profiles/default'...
Listing './lib/python3.5/site-packages/Products/AccessibleReferenceBrowserWidget/skins'...
Listing './lib/python3.5/site-packages/Products/AccessibleReferenceBrowserWidget/skins/AccessibleReferenceBrowserWidget'...
Compiling './lib/python3.5/site-packages/Products/AccessibleReferenceBrowserWidget/skins/AccessibleReferenceBrowserWidget/get_reference_field.py'...
***   File "./lib/python3.5/site-packages/Products/AccessibleReferenceBrowserWidget/skins/AccessibleReferenceBrowserWidget/get_reference_field.py", line 3
    if not implements_arbw()(context): return None
                                      ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/AccessibleReferenceBrowserWidget/skins/AccessibleReferenceBrowserWidget/reference_browser_available.py'...
***   File "./lib/python3.5/site-packages/Products/AccessibleReferenceBrowserWidget/skins/AccessibleReferenceBrowserWidget/reference_browser_available.py", line 2
    return context.this().get_reference_field() and True
    ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/AccessibleReferenceBrowserWidget/skins/AccessibleReferenceBrowserWidget/reference_field_set.py'...
***   File "./lib/python3.5/site-packages/Products/AccessibleReferenceBrowserWidget/skins/AccessibleReferenceBrowserWidget/reference_field_set.py", line 3
    if not implements_arbw()(context): raise TypeError, 'interface not implemented'
                                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products.AccessibleReferenceBrowserWidget-1.0a0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
